fixed login/register button

--- a/client/client/src/App.css
+++ b/client/client/src/App.css
@@ -183,7 +183,8 @@
 .auth-toggle {
   background: none;
   border: none;
-  color: var(--accent-primary-hover);
+  /* color: var(--accent-primary-hover); */
+  color: var(--text-primary);
   cursor: pointer;
   font-size: 0.9rem;
   padding: 0;
